# murmure

./: .env.example  CLAUDE.md  README.md  download.py  pyproject.toml  transcribe.py
samples/pcm/: T00.pcm  T01.pcm  T02.pcm  T03.pcm  T04.pcm  T05.pcm  T06.pcm  T07.pcm  T08.pcm  T09.pcm  T10.pcm  T11.pcm  T12.pcm  T13.pcm  T14.pcm  T15.pcm  T16.pcm  T17.pcm  T18.pcm  T19.pcm  T20.pcm  T21.pcm  T22.pcm  T23.pcm  stv16c.pcm
